add hint bind demo

--- a/TMOSmarty/TMOSmarty/Base.lproj/Main.storyboard
+++ b/TMOSmarty/TMOSmarty/Base.lproj/Main.storyboard
@@ -133,6 +133,15 @@
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="wife:&lt;{$couple.myWife}>" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WOz-9W-DiI">
                                 <rect key="frame" x="34" y="169" width="253" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" hint="&lt;{$myChild}>"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="child:&lt;{$myChild}>" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0qn-XI-CGB">
+                                <rect key="frame" x="34" y="198" width="253" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" hint=""/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -165,6 +174,7 @@
                     <navigationItem key="navigationItem" title="Model/View Bind" id="tO3-eR-Dad"/>
                     <connections>
                         <outlet property="ageLabel" destination="as3-gj-fgi" id="2tm-uS-jIu"/>
+                        <outlet property="wifeLabel" destination="WOz-9W-DiI" id="hOS-Fw-cgX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S0R-AS-QF7" userLabel="First Responder" sceneMemberID="firstResponder"/>
